page d'acceuil partilemment fini

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,2 +1,6 @@
 @import "./utils/variables";
+@import "./keyframes/keyframes";
 @import "./utils/generalite";
+@import "./components/navigation";
+@import "./components/logo";
+@import "./pages/home";
