--- a/src/assets/styles/utils/_generalite.scss
+++ b/src/assets/styles/utils/_generalite.scss
@@ -9,9 +9,15 @@
 }
 
 body {
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
   background-color: #f6f6f6;
   font-family: $mainFont;
   color: black;
+  padding: 30px;
+  position: relative;
+  .wrapper {
+    width: 100%;
+    height: 100%;
+  }
 }
