avancement page accueil

--- a/src/assets/styles/components/_navigation.scss
+++ b/src/assets/styles/components/_navigation.scss
@@ -1,18 +1,23 @@
-.navigation ul {
-  display: flex;
-  cursor: pointer;
-  flex-direction: row;
-  justify-content: flex-start;
-  gap: 40px;
-  font-weight: 300;
-  li {
-    color: black;
-    font-size: 15px;
-    scale: 1;
-    transition: transform 0.5s ease;
+.navigation {
+  ul {
+    display: flex;
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    font-weight: 300;
+    gap: 30px;
 
-    &:hover {
-      transform: scale(1.2);
+    li {
+      width: max-content;
+      color: black;
+      font-size: 15px;
+      scale: 1;
+      transition: transform 0.5s ease;
+
+      &:hover {
+        transform: scale(1.2);
+      }
     }
   }
 }
