--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -4,3 +4,6 @@
 @import "./components/navigation";
 @import "./components/logo";
 @import "./pages/home";
+@import "./components/scrollButton";
+@import "./components/social";
+@import "./components/header";
