--- a/src/assets/styles/utils/_generalite.scss
+++ b/src/assets/styles/utils/_generalite.scss
@@ -6,18 +6,39 @@
   outline: none;
   border: none;
   text-decoration: none;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   width: 100vw;
   height: 100vh;
-  background-color: #f6f6f6;
+  background-color: white;
   font-family: $mainFont;
   color: black;
-  padding: 30px;
+
   position: relative;
   .wrapper {
     width: 100%;
     height: 100%;
   }
+}
+.navActive {
+  border-bottom: solid 1px black;
+}
+
+.parralax {
+  background-attachment: fixed; /* Fixe l'image pendant le scroll */
+  background-size: cover; /* L'image prendra 100% de l'espace, quitte à la crop */
+  background-position: center; /* Centre la position de l'image */
+  background-repeat: no-repeat; /* Empêche l'image de se répéter en fonction de la taille d'écran */
+  background-image: url("https://i.ibb.co/D98vMmp/IMG-1613.jpg");
+  height: 100vh;
+}
+.parralax2 {
+  background-attachment: fixed; /* Fixe l'image pendant le scroll */
+  background-size: cover; /* L'image prendra 100% de l'espace, quitte à la crop */
+  background-position: center; /* Centre la position de l'image */
+  background-repeat: no-repeat; /* Empêche l'image de se répéter en fonction de la taille d'écran */
+  background-image: url("https://i.ibb.co/pbhTpj8/carissa-gan-KSXvrq-KUxnc-unsplah.jpg");
+  height: 100vh;
 }
