--- a/src/assets/styles/utils/_generalite.scss
+++ b/src/assets/styles/utils/_generalite.scss
@@ -31,7 +31,7 @@ body {
   background-size: cover; /* L'image prendra 100% de l'espace, quitte à la crop */
   background-position: center; /* Centre la position de l'image */
   background-repeat: no-repeat; /* Empêche l'image de se répéter en fonction de la taille d'écran */
-  background-image: url("https://i.ibb.co/B2cqZKL/IMG-1613.jpg");
+  background-image: url("../../../../public/img/bannerMain.webp");
   height: 100vh;
 }
 .parralax2 {
@@ -39,6 +39,6 @@ body {
   background-size: cover; /* L'image prendra 100% de l'espace, quitte à la crop */
   background-position: center; /* Centre la position de l'image */
   background-repeat: no-repeat; /* Empêche l'image de se répéter en fonction de la taille d'écran */
-  background-image: url("https://i.ibb.co/pbhTpj8/carissa-gan-KSXvrq-KUxnc-unsplah.jpg");
+  background-image: url("../../../../public/img/banner2main.webp");
   height: 100vh;
 }
