--- a/src/assets/styles/pages/_menuPage.scss
+++ b/src/assets/styles/pages/_menuPage.scss
@@ -2,21 +2,47 @@
   margin: auto;
   padding-top: 100px;
   width: 70%;
+  @include mobileVersion {
+    width: 90%;
+  }
 
-  .menuTitle {
-    text-align: center;
-    padding-top: 100px;
+  .filterWrapper {
+    .menuTitle {
+      text-align: center;
+      padding-top: 50px;
 
-    h1 {
-      font-family: "Cormorant Garamond", serif;
-      font-size: 60px;
-      margin: auto;
+      h1 {
+        font-family: "Cormorant Garamond", serif;
+        font-size: 60px;
+        margin: auto;
+      }
+    }
+    .filterContainer {
+      display: flex;
+      justify-content: space-evenly;
+      margin-top: 20px;
+      margin-bottom: 40px;
+      @include mobileVersion {
+        flex-wrap: wrap;
+      }
+      button {
+        padding: 2px 10px;
+        font-size: 20px;
+        text-decoration: underline;
+        cursor: pointer;
+
+        background-color: transparent;
+        font-family: "Cormorant Garamond", serif;
+      }
     }
   }
+
   .menuContainer {
     width: 100%;
 
     .menuSection {
+      border: solid 1px black;
+      border-radius: 40px;
       h2 {
         text-align: center;
         padding-top: 70px;
